# open-data-fabric

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  TODO.md  authoring_schemas.md  open-data-fabric.md
.github/: dependabot.yml
images/: smart_transfer_protocol_pull.puml  smart_transfer_protocol_push.puml
protocols/: smart-transfer-protocol.asyncapi.yaml  smart-transfer-protocol.openapi.yaml
rfcs/: 000-template.md  001-record-offsets.md  002-logical-data-hashes.md  003-content-addressability.md  004-metadata-extensibility.md  005-dataset-annotations.md  006-checkpoints-as-files.md  007-simple-transfer-protocol.md  008-smart-transfer-protocol.md  009-ingest-source-state.md  010-data-schema-in-metadata.md  011-push-ingest-sources.md  012-base32-encoding.md  012-recommend-base16-encoding.md  013-yaml-enum-representation.md  014-half-open-intervals.md  014-minimize-offset-scanning.md  015-unified-changelog-stream-schema.md  016-odf-schema.md  017-large-files-linking.md  018-iac-resource-framework.md  018-resource-framework.md  (+2 more)
tools/schemas/: Cargo.toml
tools/schemas/output/: rust-dtos.rs  rust-graphql.rs  rust-serde-flatbuffers.rs  rust-serde.rs
tools/schemas/src/: cli.rs  json_schema.rs  lib.rs  main.rs  model.rs
tools/schemas/src/codegen/: flatbuffers_schema.rs  markdown.rs  mermaid_erd.rs  mod.rs  rust_common.rs  rust_dtos.rs  rust_graphql.rs  rust_serde.rs  rust_serde_flatbuffers.rs
tools/schemas/src/utils/: indent_writer.rs  mod.rs
tools/schemas/tests/: test_examples.rs  test_schemas.rs  test_validation.rs
(+336 files in other folders)
